Added text preprocessing and changed several parameters for the model and data pipeline

--- a/Implementation.ipynb
+++ b/Implementation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Implementation.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM6K9TQeP8Xvv9USmJHpabn"
+      "authorship_tag": "ABX9TyMfmW0JaOTjRCxIXhxtpomW"
     },
     "kernelspec": {
       "name": "python3",
@@ -19,30 +19,44 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tL_AcL88Xv2r"
-      },
-      "source": [
-        "try:\n",
-        "    %tensorflow_version 2.x\n",
-        "except:\n",
-        "    pass"
-      ],
-      "execution_count": 19,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "cRjcFg97aqly"
       },
       "source": [
         "import tensorflow as tf\n",
         "import tensorflow_hub as hub\n",
         "import pandas as pd\n",
-        "import numpy as np"
+        "import numpy as np\n",
+        "import Sastrawi"
       ],
-      "execution_count": 20,
+      "execution_count": 1,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NVU73e6CyBhD",
+        "outputId": "5cb02d48-ef54-4fb9-97f3-90638d4a85ab"
+      },
+      "source": [
+        "!pip install PySastrawi"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting PySastrawi\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/61/84/b0a5454a040f81e81e6a95a5d5635f20ad43cc0c288f8b4966b339084962/PySastrawi-1.2.0-py2.py3-none-any.whl (210kB)\n",
+            "\r\u001b[K     |█▋                              | 10kB 13.1MB/s eta 0:00:01\r\u001b[K     |███▏                            | 20kB 17.8MB/s eta 0:00:01\r\u001b[K     |████▊                           | 30kB 12.6MB/s eta 0:00:01\r\u001b[K     |██████▎                         | 40kB 9.7MB/s eta 0:00:01\r\u001b[K     |███████▉                        | 51kB 10.5MB/s eta 0:00:01\r\u001b[K     |█████████▍                      | 61kB 7.1MB/s eta 0:00:01\r\u001b[K     |███████████                     | 71kB 7.8MB/s eta 0:00:01\r\u001b[K     |████████████▌                   | 81kB 8.4MB/s eta 0:00:01\r\u001b[K     |██████████████                  | 92kB 8.9MB/s eta 0:00:01\r\u001b[K     |███████████████▋                | 102kB 9.3MB/s eta 0:00:01\r\u001b[K     |█████████████████▏              | 112kB 9.3MB/s eta 0:00:01\r\u001b[K     |██████████████████▊             | 122kB 9.3MB/s eta 0:00:01\r\u001b[K     |████████████████████▎           | 133kB 9.3MB/s eta 0:00:01\r\u001b[K     |█████████████████████▉          | 143kB 9.3MB/s eta 0:00:01\r\u001b[K     |███████████████████████▍        | 153kB 9.3MB/s eta 0:00:01\r\u001b[K     |█████████████████████████       | 163kB 9.3MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▌     | 174kB 9.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████████    | 184kB 9.3MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▋  | 194kB 9.3MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▏| 204kB 9.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 215kB 9.3MB/s \n",
+            "\u001b[?25hInstalling collected packages: PySastrawi\n",
+            "Successfully installed PySastrawi-1.2.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -52,7 +66,7 @@
           "height": 204
         },
         "id": "Nl7b8_C3vdG8",
-        "outputId": "da79617c-dc2f-4886-844b-81c5f876c1ad"
+        "outputId": "e01a1252-84a2-47d2-9ac4-730b5e40330c"
       },
       "source": [
         "#DATASET SOURCE FROM https://github.com/dbrehmer/Knowself/blob/master/data/mypersonality/essays.csv\"\n",
@@ -63,7 +77,7 @@
         "\n",
         "df.head()"
       ],
-      "execution_count": 21,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -165,7 +179,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 2
         }
       ]
     },
@@ -176,7 +190,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KSa84m-fWk-m",
-        "outputId": "83631cbc-f7e4-4ea0-d1b8-e2ac901d7b62"
+        "outputId": "48fa951a-d240-4ff8-d75f-8cff11f039d7"
       },
       "source": [
         "def changeLabel(labels):\n",
@@ -193,7 +207,7 @@
         "changeLabel(df['cCON'])\n",
         "changeLabel(df['cOPN'])"
       ],
-      "execution_count": 22,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -216,9 +230,42 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 3
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "joE3yHq3uJ2U"
+      },
+      "source": [
+        "#Text Preprocessing referenced from https://github.com/ksnugroho/basic-text-preprocessing/blob/master/text-preprocessing.ipynb\n",
+        "import string\n",
+        "from Sastrawi.StopWordRemover.StopWordRemoverFactory import StopWordRemoverFactory\n",
+        "from Sastrawi.Stemmer.StemmerFactory import StemmerFactory\n",
+        "\n",
+        "def preprocess_text(texts):\n",
+        "  for text in texts:\n",
+        "    #lowercase all character in the text\n",
+        "    text = text.lower()\n",
+        "    #remove punctuation\n",
+        "    text = text.translate(str.maketrans(\"\",\"\",string.punctuation))\n",
+        "    #remove leading and trailing whitespace\n",
+        "    text = text.strip()\n",
+        "    #remove StopWord\n",
+        "    stopword = StopWordRemoverFactory().create_stop_word_remover()\n",
+        "    text = stopword.remove(text)\n",
+        "    #stemming\n",
+        "    stemmer = StemmerFactory().create_stemmer()\n",
+        "    text = stemmer.stem(text)\n",
+        "  \n",
+        "  return texts\n",
+        "\n",
+        "df['TTEXT'] = preprocess_text(df['TTEXT'])"
+      ],
+      "execution_count": 23,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -226,9 +273,10 @@
         "id": "1ETSRWdeh74v"
       },
       "source": [
-        "train_dataset, val_dataset, test_dataset = np.split(df, [int(.8 * len(df)), int(.9 * len(df))])\n"
+        "df = df.sample(frac=1)\n",
+        "train_dataset, val_dataset, test_dataset = np.split(df, [int(.95 * len(df)), int(.975 * len(df))])"
       ],
-      "execution_count": 23,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -258,7 +306,40 @@
         "test_label_con  = test_dataset['cCON']\n",
         "test_label_opn  = test_dataset['cOPN']"
       ],
-      "execution_count": 24,
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tQajvGJmViRb"
+      },
+      "source": [
+        "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+        "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+        "\n",
+        "#Tried to use parameter and model from the NLP Course by Deeplearning.ai\n",
+        "vocab_size = 1000\n",
+        "embedding_dim = 16\n",
+        "max_length = 120\n",
+        "trunc_type='post'\n",
+        "padding_type='post'\n",
+        "oov_tok = \"<OOV>\"\n",
+        "training_size = 20000\n",
+        "\n",
+        "tokenizer = Tokenizer(num_words=vocab_size, oov_token=oov_tok)\n",
+        "tokenizer.fit_on_texts(train_data)\n",
+        "\n",
+        "training_sequences = tokenizer.texts_to_sequences(train_data)\n",
+        "training_padded = pad_sequences(training_sequences, maxlen=max_length, padding=padding_type, truncating=trunc_type)\n",
+        "\n",
+        "val_sequences = tokenizer.texts_to_sequences(val_data)\n",
+        "val_padded = pad_sequences(val_sequences, maxlen=max_length, padding=padding_type, truncating=trunc_type)\n",
+        "\n",
+        "test_sequences = tokenizer.texts_to_sequences(test_data)\n",
+        "test_padded = pad_sequences(test_sequences, maxlen=max_length, padding=padding_type, truncating=trunc_type)"
+      ],
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -285,7 +366,7 @@
         "test_dataset_con = tf.data.Dataset.from_tensor_slices((test_data.values, test_label_con.values.astype(dtype=np.float32)))\n",
         "test_dataset_opn = tf.data.Dataset.from_tensor_slices((test_data.values, test_label_opn.values.astype(dtype=np.float32)))"
       ],
-      "execution_count": 25,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -301,9 +382,18 @@
         "model_ext = tf.keras.Sequential([\n",
         "        hub_layer,\n",
         "        tf.keras.layers.Dense(16, activation='relu'),\n",
-        "        tf.keras.layers.Dense(1, activation='sigmoid')])"
+        "        tf.keras.layers.Dropout(0.5),\n",
+        "        tf.keras.layers.Dense(1, activation='sigmoid')])\n",
+        "\n",
+        "# model_ext = tf.keras.Sequential([\n",
+        "#     tf.keras.layers.Embedding(vocab_size, embedding_dim, input_length=max_length),\n",
+        "#     tf.keras.layers.Conv1D(128, 5, activation='relu'),\n",
+        "#     tf.keras.layers.GlobalMaxPooling1D(),\n",
+        "#     tf.keras.layers.Dense(24, activation='relu'),\n",
+        "#     tf.keras.layers.Dense(1, activation='sigmoid')\n",
+        "# ])"
       ],
-      "execution_count": 26,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -312,13 +402,12 @@
         "id": "Xv_v-4e-TORd"
       },
       "source": [
-        "batch_size = 512\n",
+        "batch_size = 128\n",
         "num_examples = tf.data.experimental.cardinality(train_dataset_ext).numpy()\n",
         "ext_batches = train_dataset_ext.shuffle(num_examples // 4).batch(batch_size).prefetch(1)\n",
-        "val_batches = val_dataset_ext.batch(batch_size).prefetch(1)\n",
-        "test_batches = test_dataset_ext.batch(batch_size)"
+        "val_batches = val_dataset_ext.batch(batch_size).prefetch(1)"
       ],
-      "execution_count": 30,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -328,62 +417,52 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B4G3sVX9Tzur",
-        "outputId": "6e435e5a-6721-404c-8bae-d71009adbe9b"
+        "outputId": "c9e80076-ba3f-47af-9c16-571d4c6be40e"
       },
       "source": [
-        "model_ext.compile(optimizer='adam',\n",
+        "model_ext.compile(optimizer=tf.keras.optimizers.Adam(learning_rate = 0.0001),\n",
         "              loss='binary_crossentropy',\n",
         "              metrics=['accuracy'])\n",
         "\n",
         "history = model_ext.fit(ext_batches,\n",
         "                        validation_data=val_batches,\n",
-        "                        epochs=20)"
+        "                        epochs=15)"
       ],
-      "execution_count": 31,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Epoch 1/20\n",
-            "4/4 [==============================] - 5s 1s/step - loss: 0.4733 - accuracy: 0.8751 - val_loss: 0.6997 - val_accuracy: 0.5425\n",
-            "Epoch 2/20\n",
-            "4/4 [==============================] - 5s 1s/step - loss: 0.4567 - accuracy: 0.8932 - val_loss: 0.6316 - val_accuracy: 0.6518\n",
-            "Epoch 3/20\n",
-            "4/4 [==============================] - 5s 1s/step - loss: 0.4326 - accuracy: 0.8858 - val_loss: 0.6432 - val_accuracy: 0.6437\n",
-            "Epoch 4/20\n",
-            "4/4 [==============================] - 5s 1s/step - loss: 0.4061 - accuracy: 0.9407 - val_loss: 0.6572 - val_accuracy: 0.6194\n",
-            "Epoch 5/20\n",
-            "4/4 [==============================] - 5s 1s/step - loss: 0.3855 - accuracy: 0.9545 - val_loss: 0.6305 - val_accuracy: 0.6478\n",
-            "Epoch 6/20\n",
-            "4/4 [==============================] - 5s 1s/step - loss: 0.3645 - accuracy: 0.9513 - val_loss: 0.6526 - val_accuracy: 0.6316\n",
-            "Epoch 7/20\n",
-            "4/4 [==============================] - 5s 1s/step - loss: 0.3440 - accuracy: 0.9662 - val_loss: 0.6414 - val_accuracy: 0.6437\n",
-            "Epoch 8/20\n",
-            "4/4 [==============================] - 5s 1s/step - loss: 0.3197 - accuracy: 0.9742 - val_loss: 0.6385 - val_accuracy: 0.6478\n",
-            "Epoch 9/20\n",
-            "4/4 [==============================] - 5s 1s/step - loss: 0.3011 - accuracy: 0.9789 - val_loss: 0.6480 - val_accuracy: 0.6275\n",
-            "Epoch 10/20\n",
-            "4/4 [==============================] - 5s 1s/step - loss: 0.2782 - accuracy: 0.9796 - val_loss: 0.6405 - val_accuracy: 0.6599\n",
-            "Epoch 11/20\n",
-            "4/4 [==============================] - 5s 1s/step - loss: 0.2532 - accuracy: 0.9826 - val_loss: 0.6613 - val_accuracy: 0.6275\n",
-            "Epoch 12/20\n",
-            "4/4 [==============================] - 5s 1s/step - loss: 0.2335 - accuracy: 0.9897 - val_loss: 0.6509 - val_accuracy: 0.6518\n",
-            "Epoch 13/20\n",
-            "4/4 [==============================] - 5s 1s/step - loss: 0.2116 - accuracy: 0.9870 - val_loss: 0.6591 - val_accuracy: 0.6478\n",
-            "Epoch 14/20\n",
-            "4/4 [==============================] - 5s 1s/step - loss: 0.1909 - accuracy: 0.9919 - val_loss: 0.6613 - val_accuracy: 0.6478\n",
-            "Epoch 15/20\n",
-            "4/4 [==============================] - 5s 1s/step - loss: 0.1720 - accuracy: 0.9933 - val_loss: 0.6773 - val_accuracy: 0.6235\n",
-            "Epoch 16/20\n",
-            "4/4 [==============================] - 5s 1s/step - loss: 0.1535 - accuracy: 0.9958 - val_loss: 0.6712 - val_accuracy: 0.6397\n",
-            "Epoch 17/20\n",
-            "4/4 [==============================] - 5s 1s/step - loss: 0.1344 - accuracy: 0.9980 - val_loss: 0.6903 - val_accuracy: 0.6235\n",
-            "Epoch 18/20\n",
-            "4/4 [==============================] - 5s 1s/step - loss: 0.1183 - accuracy: 0.9993 - val_loss: 0.6869 - val_accuracy: 0.6275\n",
-            "Epoch 19/20\n",
-            "4/4 [==============================] - 5s 1s/step - loss: 0.1046 - accuracy: 0.9995 - val_loss: 0.7106 - val_accuracy: 0.6194\n",
-            "Epoch 20/20\n",
-            "4/4 [==============================] - 5s 1s/step - loss: 0.0922 - accuracy: 0.9995 - val_loss: 0.7101 - val_accuracy: 0.6235\n"
+            "Epoch 1/15\n",
+            "19/19 [==============================] - 78s 1s/step - loss: 0.7301 - accuracy: 0.5096 - val_loss: 0.6910 - val_accuracy: 0.5323\n",
+            "Epoch 2/15\n",
+            "19/19 [==============================] - 21s 1s/step - loss: 0.6915 - accuracy: 0.5262 - val_loss: 0.6917 - val_accuracy: 0.5323\n",
+            "Epoch 3/15\n",
+            "19/19 [==============================] - 21s 1s/step - loss: 0.6871 - accuracy: 0.5164 - val_loss: 0.6865 - val_accuracy: 0.5323\n",
+            "Epoch 4/15\n",
+            "19/19 [==============================] - 21s 1s/step - loss: 0.6659 - accuracy: 0.5297 - val_loss: 0.6864 - val_accuracy: 0.5484\n",
+            "Epoch 5/15\n",
+            "19/19 [==============================] - 21s 1s/step - loss: 0.6324 - accuracy: 0.6342 - val_loss: 0.6604 - val_accuracy: 0.6613\n",
+            "Epoch 6/15\n",
+            "19/19 [==============================] - 23s 1s/step - loss: 0.5805 - accuracy: 0.6914 - val_loss: 0.6354 - val_accuracy: 0.6290\n",
+            "Epoch 7/15\n",
+            "19/19 [==============================] - 21s 1s/step - loss: 0.5154 - accuracy: 0.7576 - val_loss: 0.6914 - val_accuracy: 0.5645\n",
+            "Epoch 8/15\n",
+            "19/19 [==============================] - 21s 1s/step - loss: 0.4822 - accuracy: 0.7665 - val_loss: 0.8703 - val_accuracy: 0.6935\n",
+            "Epoch 9/15\n",
+            "19/19 [==============================] - 21s 1s/step - loss: 0.4301 - accuracy: 0.8199 - val_loss: 0.9609 - val_accuracy: 0.7097\n",
+            "Epoch 10/15\n",
+            "19/19 [==============================] - 21s 1s/step - loss: 0.2949 - accuracy: 0.8843 - val_loss: 1.1196 - val_accuracy: 0.6129\n",
+            "Epoch 11/15\n",
+            "19/19 [==============================] - 21s 1s/step - loss: 0.1926 - accuracy: 0.9279 - val_loss: 1.5351 - val_accuracy: 0.6129\n",
+            "Epoch 12/15\n",
+            "19/19 [==============================] - 21s 1s/step - loss: 0.1095 - accuracy: 0.9624 - val_loss: 1.8046 - val_accuracy: 0.6452\n",
+            "Epoch 13/15\n",
+            "19/19 [==============================] - 21s 1s/step - loss: 0.0470 - accuracy: 0.9859 - val_loss: 2.2454 - val_accuracy: 0.5968\n",
+            "Epoch 14/15\n",
+            "19/19 [==============================] - 21s 1s/step - loss: 0.0394 - accuracy: 0.9880 - val_loss: 2.2417 - val_accuracy: 0.6290\n",
+            "Epoch 15/15\n",
+            "19/19 [==============================] - 21s 1s/step - loss: 0.0117 - accuracy: 0.9974 - val_loss: 3.1248 - val_accuracy: 0.6290\n"
           ],
           "name": "stdout"
         }
@@ -392,10 +471,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wjUlkXTNT6QW"
+        "id": "UNk5BhY1n98j"
       },
       "source": [
-        "  "
+        ""
       ],
       "execution_count": null,
       "outputs": []
