--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,5 @@
     <string name="posting">Posting</string>
     <string name="notifikasi">Notifikasi</string>
     <string name="profil">Profil</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="error">Oops.. ada yang salah</string>
 </resources>
