Added early stopping and new preprocessing step

--- a/Implementation.ipynb
+++ b/Implementation.ipynb
@@ -223,6 +223,13 @@
     "def preprocess_text(text):\n",
     "  #lowercase all character in the text\n",
     "  text = text.lower()\n",
+    "  #remove stripes\n",
+    "  words = text.split(' ')\n",
+    "  text = ''\n",
+    "  for word in words:\n",
+    "    if '-' in word:\n",
+    "      word = word.split('-')[0]\n",
+    "    text = text + word + ' '\n",
     "  #remove punctuation\n",
     "  text = text.translate(str.maketrans(\"\",\"\",string.punctuation))\n",
     "  #remove leading and trailing whitespace\n",
@@ -282,64 +289,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "OFyERvg9QVvQ",
-    "outputId": "df0849df-71d6-49a8-b712-ac431eeb056e"
-   },
-   "outputs": [],
-   "source": [
-    "#Exploring Data\n",
-    "\n",
-    "# import statistics\n",
-    "# word_counts = []\n",
-    "# for data in train_data:\n",
-    "#   word_count = len(data.split())\n",
-    "#   word_counts.append(word_count)\n",
-    "# print(\"mean: \",statistics.mean(word_counts))\n",
-    "# print(\"median: \",statistics.median(word_counts))\n",
-    "# print(\"max: \",max(word_counts))\n",
-    "# print(\"min: \",min(word_counts))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "id": "DChg_jGfKgm4"
-   },
-   "outputs": [],
-   "source": [
-    "# from tensorflow.keras.preprocessing.text import Tokenizer\n",
-    "# from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
-    "\n",
-    "# #Tried to use parameter and model from the NLP Course by Deeplearning.ai\n",
-    "# vocab_size = 10000\n",
-    "# embedding_dim = 16\n",
-    "# max_length = 600\n",
-    "# trunc_type='post'\n",
-    "# padding_type='post'\n",
-    "# oov_tok = \"<OOV>\"\n",
-    "# training_size = 20000\n",
-    "\n",
-    "# tokenizer = Tokenizer(num_words=vocab_size, oov_token=oov_tok)\n",
-    "# tokenizer.fit_on_texts(train_data)\n",
-    "\n",
-    "# training_sequences = tokenizer.texts_to_sequences(train_data)\n",
-    "# training_padded = pad_sequences(training_sequences, maxlen=max_length, padding=padding_type, truncating=trunc_type)\n",
-    "\n",
-    "# val_sequences = tokenizer.texts_to_sequences(val_data)\n",
-    "# val_padded = pad_sequences(val_sequences, maxlen=max_length, padding=padding_type, truncating=trunc_type)\n",
-    "\n",
-    "# test_sequences = tokenizer.texts_to_sequences(test_data)\n",
-    "# test_padded = pad_sequences(test_sequences, maxlen=max_length, padding=padding_type, truncating=trunc_type)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {
     "id": "8FmqfVpRvbVo"
@@ -379,21 +328,21 @@
     "batch_size = 128\n",
     "num_examples = tf.data.experimental.cardinality(train_dataset_ext).numpy()\n",
     "\n",
-    "# ext_train_batches = train_dataset_ext.shuffle(num_examples // 4).batch(batch_size).prefetch(1)\n",
-    "# ext_val_batches = val_dataset_ext.batch(batch_size).prefetch(1)\n",
-    "# ext_test_batches = test_dataset_ext.batch(batch_size)\n",
+    "ext_train_batches = train_dataset_ext.shuffle(num_examples // 4).batch(batch_size).prefetch(1)\n",
+    "ext_val_batches = val_dataset_ext.batch(batch_size).prefetch(1)\n",
+    "ext_test_batches = test_dataset_ext.batch(batch_size)\n",
     "\n",
-    "# neu_train_batches = train_dataset_neu.shuffle(num_examples // 4).batch(batch_size).prefetch(1)\n",
-    "# neu_val_batches = val_dataset_neu.batch(batch_size).prefetch(1)\n",
-    "# neu_test_batches = test_dataset_neu.batch(batch_size)\n",
+    "neu_train_batches = train_dataset_neu.shuffle(num_examples // 4).batch(batch_size).prefetch(1)\n",
+    "neu_val_batches = val_dataset_neu.batch(batch_size).prefetch(1)\n",
+    "neu_test_batches = test_dataset_neu.batch(batch_size)\n",
     "\n",
-    "# agr_train_batches = train_dataset_agr.shuffle(num_examples // 4).batch(batch_size).prefetch(1)\n",
-    "# agr_val_batches = val_dataset_agr.batch(batch_size).prefetch(1)\n",
-    "# agr_test_batches = test_dataset_agr.batch(batch_size)\n",
+    "agr_train_batches = train_dataset_agr.shuffle(num_examples // 4).batch(batch_size).prefetch(1)\n",
+    "agr_val_batches = val_dataset_agr.batch(batch_size).prefetch(1)\n",
+    "agr_test_batches = test_dataset_agr.batch(batch_size)\n",
     "\n",
-    "# con_train_batches = train_dataset_con.shuffle(num_examples // 4).batch(batch_size).prefetch(1)\n",
-    "# con_val_batches = val_dataset_con.batch(batch_size).prefetch(1)\n",
-    "# con_test_batches = test_dataset_con.batch(batch_size)\n",
+    "con_train_batches = train_dataset_con.shuffle(num_examples // 4).batch(batch_size).prefetch(1)\n",
+    "con_val_batches = val_dataset_con.batch(batch_size).prefetch(1)\n",
+    "con_test_batches = test_dataset_con.batch(batch_size)\n",
     "\n",
     "opn_train_batches = train_dataset_opn.shuffle(num_examples // 4).batch(batch_size).prefetch(1)\n",
     "opn_val_batches = val_dataset_opn.batch(batch_size).prefetch(1)\n",
@@ -412,14 +361,26 @@
     "\n",
     "hub_layer = hub.KerasLayer(embedding, input_shape=[], dtype=tf.string, trainable=True)\n",
     "\n",
-    "model_opn = tf.keras.Sequential([\n",
-    "        hub_layer,\n",
-    "        tf.keras.layers.Lambda(lambda x: tf.expand_dims(x, 1)),\n",
-    "        tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32,return_sequences=True)),\n",
-    "        tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(16)),\n",
-    "        tf.keras.layers.Dense(24, activation='relu'),\n",
-    "        tf.keras.layers.Dropout(0.5),\n",
-    "        tf.keras.layers.Dense(1, activation='sigmoid')])"
+    "model_ext = tf.keras.Sequential([\n",
+    "          hub_layer,\n",
+    "          tf.keras.layers.Lambda(lambda x: tf.expand_dims(x, 1)),\n",
+    "          tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(16,kernel_regularizer=tf.keras.regularizers.L2(1e-5),recurrent_regularizer=tf.keras.regularizers.L2(1e-6))),\n",
+    "          tf.keras.layers.Dense(8, activation='relu'),\n",
+    "          tf.keras.layers.Dropout(0.4),\n",
+    "          tf.keras.layers.Dense(1, activation='sigmoid')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class highAccCallback(tf.keras.callbacks.Callback):\n",
+    "  def on_epoch_end(self, epoch, logs={}):\n",
+    "    if(logs.get('accuracy')>0.90):\n",
+    "      print(\"\\nReached 9% accuracy so cancelling training!\")\n",
+    "      self.model.stop_training = True"
    ]
   },
   {
@@ -458,7 +419,8 @@
     "              metrics=['accuracy'])\n",
     "history = model_opn.fit(opn_train_batches,\n",
     "                        validation_data=opn_val_batches,\n",
-    "                        epochs=6\n",
+    "                        epochs=10,\n",
+    "                        \n",
     "                        )"
    ]
   },
@@ -546,23 +508,8 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "import tempfile\n",
     "\n",
-    "# MODEL_DIR = tempfile.gettempdir()\n",
-    "\n",
-    "# version = 1\n",
-    "\n",
-    "# export_path = \"EXT_MODEL_v\"+str(version)\n",
-    "\n",
-    "# if os.path.isdir(export_path):\n",
-    "#     print('\\nAlready saved a model, cleaning up\\n')\n",
-    "#     !rm -r {export_path}\n",
-    "\n",
-    "model_opn.save('opn_model.h5')\n",
-    "\n",
-    "# print('\\nexport_path = {}'.format(export_path))\n",
-    "# !ls -l {export_path}"
+    "model_opn.save('opn_model.h5')"
    ]
   },
   {
