--- a/README
+++ b/README
@@ -1,5 +1,13 @@
 ## HELLO WORLD
 
+<h1 align="center">
+  <br>
+  <a href=""><img src="https://drive.google.com/file/d/1zx3TBIllRcvjpI4bSgwnYUEKNUhj_qQC/view?usp=sharing" alt="Markdownify" width="200"></a>
+  <br>
+  BeeSafe
+  <br>
+</h1>
+
 This is Special Project for Bangkit 2021 capstone Project
 
 You'll dont see anything in main branch but you can switch other branch to see our progress
